--- a/Probability_Distributions/Probability_distributions_in_Python.ipynb
+++ b/Probability_Distributions/Probability_distributions_in_Python.ipynb
@@ -301,6 +301,15 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This expression creates a Boolean mask where each value in the 'OVERALL_LI' column is checked to see if it lies between the lower_limit and upper_limit. If it does, the result is True, otherwise False.\n",
+    "When taking the .mean() of a Boolean mask, the True values are treated as 1 and the False values as 0.\n",
+    "So, the mean here represents the proportion of values in 'OVERALL_LI' that fall within one standard deviation from the mean."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "yElu5vs-Xp6H"
    },
@@ -390,7 +399,7 @@
     "id": "YIwk2KMBtyfw"
    },
    "source": [
-    "Knowing that your data is normally distributed is useful for analysis because many statistical tests and machine learning models assume a normal distribution. Plus, when your data follows a normal distribution, you can use z-scores to measure the relative position of your values and find outliers in your data."
+    "Knowing that our data is normally distributed is useful for analysis because many statistical tests and machine learning models assume a normal distribution. Plus, when our data follows a normal distribution, we can use z-scores to measure the relative position of our values and find outliers in our data."
    ]
   },
   {
@@ -734,33 +743,6 @@
    },
    "source": [
     "Using z-scores, we can identify two outlying districts that have unusually low literacy rates: `DISTRICT461` and `DISTRICT429`. The literacy rates in these two districts are more than 3 SDs *below* the  overall mean literacy rate. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "WDsbFx-kxw7Z"
-   },
-   "source": [
-    "Our analysis gives us important information to share. The government may want to provide more funding and resources to these two districts in the hopes of significantly improving literacy. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Conclusion"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "1dvBvTnGHnQf"
-   },
-   "source": [
-    "**Congratulations!** You've completed this lab. However, you may not notice a green check mark next to this item on Coursera's platform. Please continue your progress regardless of the check mark. Just click on the \"save\" icon at the top of this notebook to ensure your work has been logged.\n",
-    "\n",
-    "You now understand how to use Python to model your data with the normal distribution and compute z-scores to find outliers in your data. Going forward, you can start using probability distributions to model your own datasets."
    ]
   }
  ],
